# rs-tar2sqlite

./: Cargo.toml  Dockerfile  README.md  bimg.sh  eimg.sh  example.sh  opt.sh
sample.d/: input.tar  wrld.txt
src/: core.rs  create.sql  insert.sql  lib.rs  main.rs  sqlite.rs  tar.rs  tar2sqlite.rs
