[package]
name = "rs-tar2sqlite"
version = "0.1.0"
edition = "2024"

description = "Converts the tar file to the sqlar."
license = "Apache-2.0"
repository = "https://github.com/takanoriyanagitani/rs-tar2sqlite"
homepage = "https://github.com/takanoriyanagitani/rs-tar2sqlite"
documentation = "https://docs.rs/rs-tar2sqlite/latest"
keywords = ["tar", "sqlite", "wasi", "sqlar"]

exclude = [
    "rs-tar2sqlite.wasm",
    "opt.wasm",
    "sample.d/input.tar",
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 1

[dependencies.clap]
version = "4"
default-features = false
features = [
    "std",
    "derive",
    "help",
    "usage",
]

[dependencies.rusqlite]
version = "0.39"
default-features = false
features = [
    "bundled",
]

[dependencies.tar]
version = "0.4"
default-features = false
features = [
]
